--- a/src/components/Popup/styles.css
+++ b/src/components/Popup/styles.css
@@ -2,7 +2,7 @@
     position: fixed;
     border-radius: var(--tui-radius-popup-border);
     background-color: var(--tui-color-foreground);
-    filter: drop-shadow(0 0 1px rgba(0, 0, 0, .5));
+    filter: drop-shadow(0 0 var(--tui-radius-blur-shadow) var(--tui-color-shadow));
 
     --height-tip: 10px;
     --width-tip: 20px;
@@ -42,5 +42,11 @@
         .tip {
             left: var(--width-tip);
         }
+    }
+
+    .content {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
     }
 }
