--- a/src/components/SelectInputContainer/styles.css
+++ b/src/components/SelectInputContainer/styles.css
@@ -1,9 +1,15 @@
 .popup {
-    display: flex;
-    flex-direction: column;
+    padding-top: calc(var(--tui-spacing-large) - var(--tui-spacing-medium));
+    padding-bottom: calc(var(--tui-spacing-large) - var(--tui-spacing-medium));
+
+    .popup-content {
+        display: flex;
+        flex-direction: column;
+        max-height: var(--tui-height-max-select-input-popup);
+    }
 }
 
 .option-renderer {
-    padding: var(--tui-spacing-small) var(--tui-spacing-medium);
+    padding: calc(var(--tui-spacing-large) - var(--tui-spacing-small));
     text-align: left;
 }
